--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==20.1.0
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
@@ -11,4 +12,4 @@ wheel==0.37.1
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.6
 WTForms~=3.0.1
-Flask-WTF==1.0.1
+
